v2.0/base/aimp-cloud/aimp-web/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aimp-web
  name: aimp-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aimp-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: aimp-web
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: aimprole.shaiic.com
                operator: In
                values:
                - controller
      containers:
      - env:
        - name: env
          value: prod
        image: cxyacr.azurecr.cn/aimp-cloud/aimp-web:275
        imagePullPolicy: IfNotPresent
        name: aimp-web
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: cxycred
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
