v2.0/base/aimp-cloud/aimp-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aimp-web
  name: aimp-web
  namespace: aimp-cloud
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: aimp-web
  type: ClusterIP
