v2.0/base/aimp-cloud/aimp-web/virtualservices.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: aimp-web
  namespace: aimp-cloud
spec:
  gateways:
  - istio-system/ingressgateway
  hosts:
  - pro.portal.uat.aimpcloud.cn
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: aimp-web
        port:
          number: 80
